--- a/src/MaiXIFY/Views/_ViewImports.cshtml
+++ b/src/MaiXIFY/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MaiXIFY
+@using MaiXIFY.SpotifyWebAPIWrapper
+@using MaiXIFY.SpotifyWebAPIWrapper.SpotifyObjectModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
