return json type

--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@ Please select how do you want to add playlists:
             alert('Please add a Spotify User name!')
         }
         else {
-            window.location.href = "Home/SelectPlaylists?userId=" + spotifyUserName;
+            window.location.href = "Home/GetUserPlaylists?userId=" + spotifyUserName;
         }
     }
 </script>
