--- a/src/MaiXIFY/Views/Shared/_Layout.cshtml
+++ b/src/MaiXIFY/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="GetUserPlaylists">GetUserPlaylists</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="GetPlaylist">GetPlaylist</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="CreatePlaylist">CreatePlaylist</a></li>
                 </ul>
             </div>
         </div>
