--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "MaiXIFY";
 }
 
-<h1 align="center">MaiXIFY</h1>
+<h1 align="center"></h1>
 
 <h2>Welcome to the MaiXIFY web application! Here you can create mixed Spotify playlists based on different Spotify playlists.</h2>
 <br />
