--- a/src/MaiXIFY/Views/Shared/_Layout.cshtml
+++ b/src/MaiXIFY/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MaiXIFY</a>
             </div>
             <div class="navbar-collapse collapse">
+                <img src="images/logo_long.png" alt="MaiXIFY" height="10%" width="10%"></img>
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
