--- a/src/MaiXIFY/Views/Shared/_Layout.cshtml
+++ b/src/MaiXIFY/Views/Shared/_Layout.cshtml
@@ -27,17 +27,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MaiXIFY</a>
             </div>
             <div class="navbar-collapse collapse">
-                <img src="images/logo_long.png" alt="MaiXIFY" height="10%" width="10%"></img>
+                <a href="@Url.Action("Index", "Home")">
+                    <img alt="MaiXIFY" src="@Url.Content("/images/logo_long.png")" height="10%" width="10%">
+                </a>
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="GetUserPlaylists">GetUserPlaylists</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="GetPlaylist">GetPlaylist</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="CreatePlaylist">CreatePlaylist</a></li>
                 </ul>
             </div>
         </div>
