--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -2,9 +2,12 @@
     ViewData["Title"] = "MaiXIFY";
 }
 <h1 align="center"></h1>
-<h2>Welcome to the MaiXIFY web application! Here you can create mixed Spotify playlists based on different Spotify playlists.</h2>
+<h2>
+    Hey @ViewData["UserName"], welcome to MaiXIFY!<br /><br />
+    Just select some Spotify playlist below, and enjoy your new mixed playlist!
+</h2>
 <br />
-<div id="divForSelectedPlaylists" style="display:none"><h3>Selected playlists:</h3><br /><button type="button" onclick="MaiXIFY()">MaiXIFY</button><br /><br /></div>
+<div id="divForSelectedPlaylists" style="display:none"><h3>Selected playlists:</h3><br /><button type="button" onclick="MaiXIFY()">MaiXIFY it!</button><br /><br /></div>
 <div id="formDiv">
     <div id="divForSelectedPlaylists" style="display:none"></div>
     <div id="playlistForm" style="display:inline-block">
