"maixify it!" button large

--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     Just select some Spotify playlist below, and enjoy your new mixed playlist!
 </h2>
 <br />
-<div id="divForSelectedPlaylists" style="display:none"><h3>Selected playlists:</h3><br /><button type="button" class="btn btn-sm btn-default" onclick="MaiXIFY()">MaiXIFY it!</button><br /><br /></div>
+<div id="divForSelectedPlaylists" style="display:none"><h3>Selected playlists:</h3><br /><button type="button" class="btn btn-lg btn-default" onclick="MaiXIFY()">MaiXIFY it!</button><br /><br /></div>
 <div id="formDiv">
     <div id="divForSelectedPlaylists" style="display:none"></div>
     <div id="playlistForm" style="display:inline-block">
